--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "functions": {
-    "upimg.php": {
+    "api/upimg.php": {
       "runtime": "vercel-php@0.3.1",
       "excludeFiles": "{test/**}",
       "memory": 256,
